--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.reservavideojuegos/org.example.reservavideojuegos.HelloApplication
+                            <mainClass>org.example.reservavideojuegos/org.example.reservavideojuegos.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
